# watchline

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
