[package]
name = "watchline"
version = "0.1.0"
edition = "2021"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
description = "runs a command at an interval (similar to `watch`; without clearing the screen)"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive", "cargo"] }
