[package]
name = "watchline"
version = "0.1.0"
edition = "2021"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
description = "runs a command at an fixed interval"
repository = "https://github.com/eldad/watchline"
license = "MIT"
categories = ["command-line-utilities"]

[profile.release]
# strip symbols to reduce binary size
strip = true
# optimize for size
opt-level = "z"
# link time optimizations
lto = true
# maximize size reduction optimizations
codegen-units = 1
# we have no symbols, backtrace won't be helpful anyway
panic = "abort"

[dependencies]
clap = { version = "4.1.11", features = ["derive", "cargo"] }
eyre = "0.6.8"
simple-eyre = "0.3.1"
thiserror = "1.0.41"
