[package]
name = "watchline"
version = "0.1.2"
edition = "2021"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
description = "runs a command at an fixed interval"
repository = "https://github.com/eldad/watchline"
license = "MIT"
categories = ["command-line-utilities"]

[profile.release]
# strip symbols to reduce binary size
strip = true
# optimize for size
opt-level = "z"
# link time optimizations
lto = true
# maximize size reduction optimizations
codegen-units = 1
# we have no symbols, backtrace won't be helpful anyway
panic = "abort"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4", features = ["derive", "cargo"] }
thiserror = "2"
